--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ Thumbs.db
 
 # Ignore large files (manually add if you don’t want to commit a specific model)
 static/vit_trained_wheel.pth
+
+static/*.json
