--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ Thumbs.db
 .ipynb_checkpoints/
 
 # Ignore large files (manually add if you don’t want to commit a specific model)
+app/static/vit_trained_wheel.pth
 static/vit_trained_wheel.pth
 
-static/*.json
+# Ignore .json files in the static folder
+app/static/*.json
